plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.aibe'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Web & Validation
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Database & JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2'

    // Apache Tika 텍스트 추출
    implementation 'org.apache.tika:tika-core:2.9.1'
    implementation 'org.apache.tika:tika-parsers-standard-package:2.9.1'
    // env
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    // Redisson
    implementation 'org.redisson:redisson-spring-boot-starter:3.27.0'
    // Spring AOP (DistributedLockAspect 사용을 위해 필요)
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    // Security & JWT
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // Swagger UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    // Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    
    implementation 'org.jsoup:jsoup:1.13.1'

    // Spring Batch
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    // Spring Batch 테스트용 라이브러리 (추후 단위 테스트 작성 시 필요)
    testImplementation 'org.springframework.batch:spring-batch-test'


    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    implementation platform("software.amazon.awssdk:bom:2.25.52")
    implementation "software.amazon.awssdk:s3"
    implementation "software.amazon.awssdk:auth"

    // AWS S3 Presigner 의존성
    implementation 'software.amazon.awssdk:s3:2.20.162'

    implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs:3.1.0'
}

// Q-Class
def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile

tasks.withType(JavaCompile).configureEach {
    options.getGeneratedSourceOutputDirectory().set(querydslDir)
}

clean{
    delete file(querydslDir)
}

tasks.named('test') {
    useJUnitPlatform()
}